# UCV-ATE-SI-LAB02

./: procesamiento_imagen.py
lab02_poetry/: pyproject.toml  requirements.txt
lab02_poetry/src/image_processing/: _init_.py  loader.py  main.py  transform.py
lab02_poetry/tests/: test_transform.py
